--- a/app/views/devise/dppe_passwords/edit.html.erb
+++ b/app/views/devise/dppe_passwords/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Change your password</h2>
 
-<%= form_for(resource, as: resource_name, url: [resource_name, :password_regular_update_enforcement], html: { method: :put }) do |f| %>
+<%= form_for(resource, as: resource_name, url: [resource_name, :dppe_password], html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
   <p><%= f.label :current_password, "Current password" %><br />
