--- a/spec/rails-app-6_1/app/views/layouts/application.html.erb
+++ b/spec/rails-app-6_1/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+  <body>
     <header>
       <h1>Devise Password Policy Extension - RailsApp</h1>
     </header>
@@ -31,4 +31,5 @@
         <% end %>
       </ul>
     </footer>
+  </body>
 </html>
